<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/activated_background">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/find_city_drawer"
            android:icon="@drawable/ic_city"
            android:title="@string/find_city" />

        <item
            android:id="@+id/last_cities_drawer"
            android:icon="@drawable/ic_cities"
            android:title="@string/last_cities" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/share_drawer"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/about_drawer"
                android:icon="@drawable/ic_person"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
